Fixed a bug with display on small screens.

--- a/src/app/game-builder/game-builder.component.scss
+++ b/src/app/game-builder/game-builder.component.scss
@@ -16,8 +16,8 @@
   width: 95%;
   max-width: 95%;
   justify-content: space-between;
-  position: absolute;
-  bottom: 25%;
+  position: relative;
+  margin-top: 10vh;
   gap: 10px;
 
   & > * {
@@ -47,4 +47,84 @@
   position: absolute;
   top: 20px;
   right: 70px;
+}
+
+@media (max-width: 1366px) {
+  .game-container {
+    display: flex;
+    width: 95%;
+    max-width: 95%;
+    justify-content: space-between;
+    position: relative;
+    margin-top: 15vh;
+    gap: 10px;
+
+    & > * {
+      flex: 1;
+      text-align: center;
+    }
+
+    .game-section {
+      flex: 1;
+      text-align: center;
+
+      p {
+        font-size: 14px;
+        color: white;
+        font-weight: bold;
+        margin-bottom: 5px;
+      }
+
+      .highlight {
+        color: orange;
+        font-weight: bold;
+      }
+    }
+  }
+
+  .talent-selection {
+    position: absolute;
+    top: 20px;
+    right: 50px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .game-container {
+    display: flex;
+    width: 95%;
+    max-width: 95%;
+    justify-content: space-between;
+    position: relative;
+    margin-top: 15vh;
+    gap: 10px;
+
+    & > * {
+      flex: 1;
+      text-align: center;
+    }
+
+    .game-section {
+      flex: 1;
+      text-align: center;
+
+      p {
+        font-size: 10px;
+        color: white;
+        font-weight: bold;
+        margin-bottom: 5px;
+      }
+
+      .highlight {
+        color: orange;
+        font-weight: bold;
+      }
+    }
+  }
+
+  .talent-selection {
+    position: absolute;
+    top: 20px;
+    right: 25px;
+  }
 }
