--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,7 +2,6 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  position: absolute;
   top: 15%;
   left: 25%;
 }
